# smart-ledger

./: .gitignore  README.md
.github/workflows/: build.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/smartledger/: MainActivity.kt
android/app/src/main/java/com/smartledger/bridge/: RustBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
rust/: Cargo.toml
rust/src/: error.rs  lib.rs
rust/src/ai/: analyzer.rs  mimo.rs  mod.rs  parser.rs
rust/src/core/: account.rs  budget.rs  category.rs  mod.rs  record.rs  statistics.rs
rust/src/ffi/: mod.rs
rust/src/storage/: database.rs  export.rs  mod.rs
